# simple_item_plugin

./: .gitignore  package-lock.json  pyproject.toml
.github/workflows/: release.yml
simple_item_plugin/: __init__.py  control_flow.py  crafting.py  fancy_pants.py  guide.py  item.py  mineral.py  new_guide.py  plugin.py  utils.py
simple_item_plugin/versioning/: models.py
