[project]
name = "simple-item-plugin"
version = "0.30.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beet>=0.113.0b10",
    "bolt>=0.50.0b5",
    "mecha>=0.102.0b2",
    "model-resolver>=1.13.0",
    "weld-deps>=0.8.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simple_item_plugin"]
